--- a/installer_resources/ChangeLog.txt
+++ b/installer_resources/ChangeLog.txt
@@ -73,6 +73,20 @@
 --Мелкие исправления
 
 --------------------------------------------------------------------------------------------------------------------------------------------------
+Версия 1.0.4
+Дата выпуска: 25.12.2025
+Статус: обновление
+
+--Настройка логирования:
+    * папка с архивом логов (30 дней хранение)
+    * ограничение лог-файла (Замена файла раз в сутки | объем файла не более 10 Mb)
+
+--Кнопки включенных разделов приложения становятся не активными
+
+--Добавлена версия ПО на панели
+
+--Добавлен ярлык на деинсталлятор
+--------------------------------------------------------------------------------------------------------------------------------------------------
 Контакты для вопросов:
 [vovashi136@yandex.ru | https://t.me/Skilds]
 --------------------------------------------------------------------------------------------------------------------------------------------------
